--- a/src/app/components/movies/movies-list/movies-list.component.html
+++ b/src/app/components/movies/movies-list/movies-list.component.html
@@ -1,10 +1,8 @@
-<div class="row" *ngIf="isTableVisible && !isDetailVisible" >
-  <div class="col-md-12">
+<div class="row">
+  <div class="col-md-12" *ngIf="isTableVisible">
     <table class="table table-striped">
       <thead class="thead-dark">
         <tr>
-          <th scope="col">id</th>
-          <th scope="col">imdbID</th>
           <th scope="col">Title</th>
           <th scope="col">Year</th>
           <th scope="col">image</th>
@@ -12,19 +10,16 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let movie of searchResult.Search; let i = index">
-          <td scope="row">{{ i + 1 }}</td>
-          <td scope="row">{{ movie.imdbID }}</td>
+        <tr *ngFor="let movie of searchResult.Search">
           <td scope="row">{{ movie.Title }}</td>
           <td scope="row">{{ movie.Year }}</td>
           <td scope="row">
             <img
-          [src]="movie.Poster"
-          alt="{{ movie.Title }}"
-          class="img-responsive"
-          style="max-height: 50px;"
-          />
-
+              [src]="movie.Poster"
+              alt="{{ movie.Title }}"
+              class="img-responsive"
+              style="max-height: 50px;"
+            />
           </td>
           <td scope="row">
             <button
@@ -39,11 +34,11 @@
       </tbody>
     </table>
   </div>
-</div>
-<div class="container" *ngIf="isDetailVisible">
-  <div class="row">
+  <div class="row" *ngIf="isDetailVisible">
     <div class="col-md-12">
-      <router-outlet></router-outlet>
+      <app-movies-details
+        [movieDetail]="movieDetailResponse"
+      ></app-movies-details>
     </div>
   </div>
 </div>
