--- a/src/app/shared/pagination/pagination.component.html
+++ b/src/app/shared/pagination/pagination.component.html
@@ -1,7 +1,14 @@
-<nav aria-label="page navigation example" class="col-md-12">
-  <ul class="pagination">
-    <li class="page-item" (click)="onClickPage(activePage - 1)"><a class="page-link" href="javascript:void(0);">Previous</a></li>
-    <li class="page-item" [ngClass]="{'active': activePage === item}" *ngFor="let item of pages" (click)="onClickPage(item)"><a class="page-link" href="javascript:void(0);">{{item}}</a></li>
-    <li class="page-item" (click)="onClickPage(activePage + 1)"><a class="page-link" href="javascript:void(0);">Next</a></li>
-  </ul>
-</nav>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <nav aria-label="page navigation example" class="col-md-12">
+        <ul class="pagination">
+          <li class="page-item" (click)="onClickPage(activePage - 1)"><a class="page-link" href="javascript:void(0);">Previous</a></li>
+          <li class="page-item" [ngClass]="{'active': activePage === item}" *ngFor="let item of pages" (click)="onClickPage(item)"><a class="page-link" href="javascript:void(0);">{{item}}</a></li>
+          <li class="page-item" (click)="onClickPage(activePage + 1)"><a class="page-link" href="javascript:void(0);">Next</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</div>
+
