--- a/src/app/components/favorites/favorites.component.html
+++ b/src/app/components/favorites/favorites.component.html
@@ -1,10 +1,11 @@
 <div class="container">
-  <div class="card-deck" *ngIf="!isDetailVisible &&  isCardVisible">
+  <div class="card w-75" *ngIf="!isDetailVisible &&  isCardVisible">
     <div class="card" *ngFor="let favoriteItem of favorites.favoritesItems">
       <img class="card-img-top img-responsive" [src]="favoriteItem.Poster" alt="{{favoriteItem.Title}}"
-      style="max-height: 50%;">
+      style="max-height: 300px; max-width: 150px;">
       <div class="card-body">
         <h6 class="card-title">{{favoriteItem.Title}}</h6>
+        <p>{{favoriteItem.Plot}}</p>
         <button
               class="btn btn-success"
               type="button"
